<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.foodorder.activity.HomeActivity">

    <!-- Top App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            app:contentInsetStart="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!--                <ImageButton-->
                <!--                    android:id="@+id/btnNotification"-->
                <!--                    android:layout_width="48dp"-->
                <!--                    android:layout_height="48dp"-->
                <!--                    android:background="?attr/selectableItemBackgroundBorderless"-->
                <!--                    android:src="null"-->
                <!--                    app:tint="@color/primary" />-->
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Search bar -->
<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="56dp"-->
<!--                app:cardCornerRadius="28dp"-->
<!--                app:cardElevation="2dp"-->
<!--                android:layout_marginBottom="24dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:orientation="horizontal"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:paddingStart="16dp"-->
<!--                    android:paddingEnd="16dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="24dp"-->
<!--                        android:layout_height="24dp"-->
<!--                        android:src="@drawable/icon_search"-->
<!--                        app:tint="#9E9E9E" />-->

<!--                    <EditText-->
<!--                        android:id="@+id/etSearch"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:background="@null"-->
<!--                        android:hint="What would you like food ?"-->
<!--                        android:paddingStart="16dp"-->
<!--                        android:textSize="16sp" />-->
<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

            <!-- Banner -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <!-- Thêm FrameLayout để chồng ViewPager và TabLayout -->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!-- Banner ViewPager -->
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/bannerViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <!-- Indicator -->
                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/bannerIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginBottom="12dp"
                        android:background="@android:color/transparent"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp" />

                </FrameLayout>
            </androidx.cardview.widget.CardView>



            <!-- tạo thanh ngang -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
            android:layout_marginVertical="8dp"/>

            <!-- Popular Food -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Featured_foods"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularFood"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                android:layout_marginBottom="16dp" />

            <!-- tạo thanh ngang -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0"
                android:layout_marginVertical="8dp"/>

            <!-- danh sách các món ăn cụ thể theo loại -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Foods"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categories"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginBottom="24dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFoods"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="1"
                android:layout_marginBottom="16dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="500dp"
        android:src="@drawable/ic_cart"
        app:backgroundTint="@color/blue_500"
        app:tint="@android:color/white"
        android:contentDescription="cak" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>